--- a/education.html
+++ b/education.html
@@ -291,8 +291,8 @@
         <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline1.png'); background-repeat: no-repeat; background-size: auto;"></div>
         <div class="date date1">2021-2022</div>
         <div>
-            <h2 class="timelineHeading">Columbia University</h2>
-            <h6>Masters of Science, Computer Science & Engineering</h6>
+            <h2 class="timelineHeading">Christ (Deemed to be University)</h2>
+            <h6>Masters of Business Administration, Business Analytics</h6>
             <li>Top 1% in the department</li>
             <li>Best Undergraduate Researcher</li>
             <li>Betsy Schumacker Woman</li>
@@ -310,10 +310,10 @@
         <div>
             <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline2.png'); background-repeat: no-repeat; background-size: auto; background-position: center top"></div>
         </div>
-        <div class="date date2">2017-2021</div>
+        <div class="date date2">2019-2022</div>
         <div class="alignment">
-            <h3 class="timelineHeading2">Massachusetts Institute of Technology</h3>
-            <h6>Bachelors of Science, Computer Science & Engineering</h6>
+            <h3 class="timelineHeading2">Dwaraka Doss Goverdhan ㅤㅤㅤㅤ Doss Vaishnav College</h3>
+            <h6>Bachelors of Business Administration, General</h6>
             <li>Top 1% in the department</li>
             <li>Best undergraduate Reseracher</li>
             <li>Betsy Schumacker Woman</li>
@@ -331,9 +331,9 @@
 
       <div class="timeline-content js--fadeInLeft">
         <div class="timeline-img-header" style="background-image: url('assets/images/education-page/edTimeline3.png'); background-repeat: no-repeat; background-size: auto"></div>
-        <div class="date date3">2013-2017</div>
+        <div class="date date3">2016-2019</div>
         <div class="align-third">
-            <h2 class="timelineHeading3">Delhi Public School</h2>
+            <h2 class="timelineHeading3">Velammal Vidhyashram</h2>
             <h6>High School</h6>
             <li>Top 1% in the department</li>
             <li>Best undergraduate Reseracher</li>
